# recipe-finder-ai-mcp

./: .gitignore  .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
recipe_finder_ai_mcp/: server.py
